--- a/style.css
+++ b/style.css
@@ -3,11 +3,22 @@ body {
   font-family: monospace;
   margin: 10px;
   text-align:center;
+  font-size: 20px;
+}
+p{
+  font-size: 20px;
 }
 
 table, .tg{
   border-style: solid;
   border-color: white;
   border-collapse: collapse;
+  margin: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer{
+  font-size: 15px;
 }
 
