--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 }
 p{
   font-size: 20px;
+  border: 4px solid blue;
 }
 
 table, .tg{
@@ -19,6 +20,10 @@ table, .tg{
 }
 
 footer{
+  font-size: 15px;
+}
+
+#info{
   font-size: 15px;
 }
 
