--- a/style.css
+++ b/style.css
@@ -3,11 +3,19 @@ body {
   font-family: monospace;
   margin: 10px;
   text-align:center;
-  font-size: 20px;
+  font-size: 22.5px;
 }
-p{
-  font-size: 20px;
-  border: 4px solid blue;
+
+#name{
+  font-family:'Courier New', Courier, monospace;
+  letter-spacing: 3px;
+}
+
+#intro{
+  font-size: 18px;
+  border: 4px double white;
+  margin-bottom: 20px;
+  margin-top: 15px;
 }
 
 table, .tg{
